--- a/UTeM_EComplaint/UTeM_EComplaint.iOS/UTeM_EComplaint.iOS.csproj
+++ b/UTeM_EComplaint/UTeM_EComplaint.iOS/UTeM_EComplaint.iOS.csproj
@@ -211,4 +211,16 @@
   <ItemGroup>
     <BundleResource Include="Resources\add.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\user.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\xmark.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\rightArrow.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\UTeM.png" />
+  </ItemGroup>
 </Project>
