--- a/UTeM_EComplaint/UTeM_EComplaint.Android/Properties/AndroidManifest.xml
+++ b/UTeM_EComplaint/UTeM_EComplaint.Android/Properties/AndroidManifest.xml
@@ -1,14 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.pppk.utem_ecomplaint" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
-	<application android:label="UTeM_EComplaint.Android" android:theme="@style/MainTheme">
-		<provider android:name="androidx.core.content.FileProvider"
-                 android:authorities="${applicationId}.provider"
-                 android:exported="false"
-                 android:grantUriPermissions="true">
-			<meta-data android:name="android.support.FILE_PROVIDER_PATHS"
-					   android:resource="@xml/provider_paths" />
-			</provider>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.pppk.utem_ecomplaint" android:installLocation="preferExternal">
+	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="26" />
+	<application android:label="UTeM_EComplaint.Android" android:theme="@style/MainTheme" android:icon="@drawable/love">
+		<provider android:name="androidx.core.content.FileProvider" android:authorities="${applicationId}.provider" android:exported="false" android:grantUriPermissions="true">
+			<meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/provider_paths" />
+		</provider>
 		<receiver android:name="com.google.firebase.iid.FirebaseInstanceIdInternalReceiver" android:exported="true" />
 		<receiver android:name="com.google.firebase.iid.FirebaseInstanceIdReceiver" android:exported="true" android:permission="com.google.android.c2dm.permission.SEND">
 			<intent-filter>
@@ -17,9 +13,18 @@
 				<category android:name="${applicationId}" />
 			</intent-filter>
 		</receiver>
+		<uses-library android:name="org.apache.http.legacy" android:required="false" />
+		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBhX-FslrF9MilclOJvk7WzmkAP1YiVMxM" />
 	</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.CAMERA" />
+	<uses-feature android:name="android.hardware.location" android:required="false" />
+	<uses-feature android:name="android.hardware.location.gps" android:required="false" />
+	<uses-feature android:name="android.hardware.location.network" android:required="false" />
 </manifest>
